# furl-ctx

./: .commitlintrc.json  .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-config.json  BENCHMARKS.md  CCR-RETENTION.md  CHANGELOG.md  CODEBASE-MAP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  EVAL-break.md  FABLE-RECON-PLAN.md  LIBRARY.md  LICENSE  MORNING-REPORT.md  Makefile  NOTICE  PLAN.md  README.md  RUST_DEV.md  SECURITY.md  conftest.py  deny.toml  glama.json  harness-plan.md  lazy-dev-AUDIT-v2.md  llms.txt  mkdocs.yml  pyproject.toml  rust-toolchain.toml
.claude-plugin/: marketplace.json
.claude/runtime/: eval-launch.md  fat-groundtruth-v4.md  fat-groundtruth.md  floor_check.py  gate.sh  handoff.md  rust-fat-groundtruth.md  test-baseline.md
.claude/workflow/: CONSENSUS_WORKFLOW.md  DEFAULT_WORKFLOW.md  INVESTIGATION_WORKFLOW.md  Q&A_WORKFLOW.md
.claude/workflows/: README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/claude/: setup.sh
.github/plugin/: marketplace.json
.github/workflows/: autofix.yml  ci.yml  devcontainers.yml  perf.yml  pr-health.yml  publish.yml  release-please.yml  release.yml  rust.yml  stale.yml
.jules/: bolt.md
archive/: README.md  RESTORE-LOG.md
benchmarks/: BASELINE.md  __init__.py  _eval_corpora.py  agent_utility_eval.py  baseline_results.json  code_roundtrip.py  compare_baseline.py  datasets.py  imp2_ab.py  metrics.py  needle_recall.py  run_bench.py  run_final.py
crates/furl-core/: Cargo.toml
crates/furl-core/benches/: ccr_store.rs  tokenizer.rs
crates/furl-core/examples/: byte_pin.rs
crates/furl-core/src/: lib.rs
crates/furl-core/src/ccr/: markers.rs  mod.rs  persist.rs
crates/furl-core/src/ccr/backends/: in_memory.rs
crates/furl-core/src/relevance/: base.rs  bm25.rs  hybrid.rs  mod.rs
crates/furl-core/src/signals/: README.md  keyword_detector.rs  line_importance.rs  mod.rs
crates/furl-core/src/tokenizer/: estimator.rs  mod.rs  registry.rs  tiktoken_impl.rs
crates/furl-core/src/transforms/: adaptive_sizer.rs  anchor_selector.rs  detection.rs  diff_compressor.rs  log_compressor.rs  mod.rs  search_compressor.rs  text_crusher.rs  unidiff_detector.rs
crates/furl-core/src/transforms/smart_crusher/: analyzer.rs  anchors.rs  builder.rs  config.rs  constraints.rs  crusher.rs  crushers.rs  error_keywords.rs  field_detect.rs  field_role.rs  hashing.rs  mod.rs  observer.rs  orchestration.rs  outliers.rs  persist.rs  planning.rs  route.rs  traits.rs  types.rs  walk.rs
crates/furl-core/src/transforms/smart_crusher/compaction/: classifier.rs  compactor.rs  encodings.rs  formatter.rs  ir.rs  mod.rs  walker.rs
crates/furl-core/src/util/: mod.rs  pyjson.rs
crates/furl-core/tests/: ccr_roundtrip.rs  tokenizer_proptest.rs  tokenizer_python_parity.rs  typed_dropped_refs.rs
crates/headroom-core/: Cargo.toml
crates/headroom-core/benches/: ccr_store.rs
crates/headroom-core/src/: cache_control.rs  lib.rs
crates/headroom-core/src/ccr/: markers.rs  mod.rs
crates/headroom-core/src/ccr/backends/: in_memory.rs  mod.rs  redis.rs  sqlite.rs
crates/headroom-core/src/relevance/: base.rs  hybrid.rs  mod.rs
crates/headroom-core/src/signals/: README.md
crates/headroom-core/src/tokenizer/: hf_impl.rs  mod.rs  registry.rs  tiktoken_impl.rs
crates/headroom-core/src/transforms/: adaptive_sizer.rs  anchor_selector.rs  content_detector.rs  detection.rs  diff_compressor.rs  log_compressor.rs  magika_detector.rs  mod.rs  search_compressor.rs  tag_protector.rs  unidiff_detector.rs
crates/headroom-core/src/transforms/smart_crusher/: analyzer.rs  builder.rs  config.rs  crusher.rs  crushers.rs  error_keywords.rs  field_role.rs  mod.rs  orchestration.rs  outliers.rs  planning.rs  traits.rs  types.rs
crates/headroom-core/src/transforms/smart_crusher/compaction/: compactor.rs  encodings.rs  formatter.rs  ir.rs  mod.rs  walker.rs
crates/headroom-core/tests/: auth_mode.rs  ccr_backends.rs  ccr_roundtrip.rs
demo/: README.md  furl-demo.tape  furl_demo.py
furl_ctx/: __init__.py  _version.py  chat.py  cli.py  compress.py  compress_to.py  config.py  exceptions.py  hooks.py  host_version.py  parser.py  paths.py  pipeline.py  redaction.py  release_version.py  retrieve.py  tokenizer.py  tools.json  utils.py
headroom/: __init__.py  compress.py  config.py  hooks.py  onnx_runtime.py  parser.py  paths.py  pipeline.py  tokenizer.py  utils.py
scripts/: build_rust_extension.sh  release_version.py
site/: README.md  index.html  llms.txt  robots.txt  sitemap.xml  vercel.json
tests/: __init__.py  _fixtures.py  conftest.py  test_adaptive_sizer_parity.py  test_analysis_intent_keywords.py  test_api_contract_fixes.py  test_apply_extraction_identity.py  test_apply_min_tokens_floor_characterization.py  test_apply_rejects_unknown_kwargs.py  test_audit_retrieve_surface_alpha.py  test_autofix_e2e_scratch.py  test_b3_redact_purge.py  test_benchmarks_fail_closed.py  test_bm25_dead_branch_parity.py  test_bm25_scorer.py  test_cache_aligner_block_format.py  test_cache_aligner_hardening.py  test_cache_aligner_prefix_hash.py  test_cache_base_config.py  test_ccr.py  test_ccr_counters.py  test_ccr_durable_write_veto.py  test_ccr_eviction_loud_miss.py  test_ccr_filter_units.py  test_ccr_hash_collision_drop.py  test_ccr_hash_collision_keep_first.py  test_ccr_hash_parity_vectors.py  test_ccr_marker_grammar_characterization.py  test_ccr_mirror_hash_verify.py  test_ccr_mirror_marker_parity.py  test_ccr_mirror_no_silent_loss.py  test_ccr_mirror_valueerror_veto.py  test_ccr_miss_message_honest.py  test_ccr_offload_fallback.py  test_ccr_persist_failure_vetoes.py  test_ccr_project_isolation.py  test_ccr_proportional_retrieval.py  test_ccr_query_numeric_fidelity.py  test_ccr_recovery_invariant.py  test_ccr_redaction_redos.py  (+163 more)
verify/: REPORT.md  SOURCES.md  generators.py  independent_recheck.py  measure.py  raw_results.json  run.py  worker.py
(+201 files in other folders)
