[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "furl-ctx"
version = "0.26.0"
description = "The Context Optimization Layer for LLM Applications - Cut costs by 50-90%"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Omar Y. Abdi", email = "omar19970423@gmail.com" }
]
maintainers = [
    { name = "Omar Y. Abdi", email = "omar19970423@gmail.com" }
]
keywords = [
    "llm",
    "openai",
    "anthropic",
    "claude",
    "gpt",
    "context",
    "token",
    "optimization",
    "compression",
    "caching",
    "ai",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # Core: lightweight compression (SmartCrusher, ContentRouter, CCR)
    "tiktoken>=0.5.0",            # Tokenizer for all compressors
    "tomli>=2.0.0; python_version < '3.11'",  # tomllib backport for helper scripts
]

[project.urls]
Homepage = "https://github.com/omar-y-abdi/furl"
Repository = "https://github.com/omar-y-abdi/furl"
Issues = "https://github.com/omar-y-abdi/furl/issues"

[project.optional-dependencies]
# MCP server for Claude Code integration (furl_ctx.ccr.mcp_server).
mcp = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.15.19",
    "mypy>=1.14.1",
    "pre-commit>=3.0.0",
    "numpy>=1.24.0",
]
# All optional dependencies (everything the compression library can use)
all = [
    "furl-ctx[mcp]",
]

# Maturin builds a single wheel containing both the Python source under
# `furl_ctx/` AND the compiled Rust extension `furl_ctx/_core.so` (cdylib
# from `crates/furl-py`). One `pip install furl-ctx` ships everything
# atomically — no separate `furl-core-py` package, no chicken-and-egg,
# no PIP_FIND_LINKS plumbing. Phase A0's runtime fail-loud check still
# exists but only fires if someone forces an sdist install on a platform
# without a wheel and the rust toolchain isn't available to compile it.
# Pin the project's package index to public PyPI. Without this, `uv lock`
# inherits the developer's user-level `~/.config/uv/uv.toml` index
# setting — including private/internal mirrors like
# `pypi.netflix.net/simple` — and bakes those URLs into uv.lock, which
# then breaks CI on every public runner that can't reach the mirror.
# Declaring the index in pyproject.toml makes the project authoritative
# regardless of who runs `uv lock`.
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
default = true

[tool.maturin]
# Where the Python package lives. With `python-source = "."` and the
# package directory `furl_ctx/` at repo root, maturin includes every file
# under `furl_ctx/` in the wheel — that picks up the bundled YAML configs.
# `LICENSE` and `NOTICE` are listed
# explicitly because maturin sdists do not get the package-directory
# treatment wheels do, and PEP 639 auto-discovery emits both files into
# `License-File:` metadata — PyPI rejects sdists whose declared license
# files are missing from the tarball with `400 License-File X does not
# exist in distribution file`.
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "NOTICE", format = "sdist" },
]
python-source = "."
module-name = "furl_ctx._core"
# The cdylib source lives under `crates/furl-py`. Maturin invokes
# `cargo build` with this manifest to produce `_core.cdylib`, then injects
# the resulting `.so` into the wheel at `furl_ctx/_core.so`.
manifest-path = "crates/furl-py/Cargo.toml"
features = ["extension-module"]
# Forbid building without the cdylib feature — bare `cargo build` won't
# produce a usable Python extension. Maturin's default `bindings` is "pyo3"
# which is correct here (see `crates/furl-py/src/`).
bindings = "pyo3"

[tool.ruff]
target-version = "py310"
line-length = 100
# Exclude Claude Code tooling/skills directories — these are agent-runtime
# scripts, not project code, and are not present in CI git checkouts.
exclude = [".claude/agents", ".claude/hooks", ".claude/skills"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without strict parameter
]

[tool.ruff.lint.isort]
known-first-party = ["furl_ctx"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# Per-module overrides for modules with dynamic typing patterns
[[tool.mypy.overrides]]
module = [
    "furl_ctx.ccr.mcp_server",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "furl_ctx.tokenizers.*",
]
disallow_untyped_defs = false
warn_return_any = false

# Ignore third-party stubs with syntax errors
[[tool.mypy.overrides]]
module = ["mlx.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    # pyo3 Unsendable parsers emit an unraisable warning when GC drops them on a
    # test-teardown thread; this is a test-harness artifact, not a production issue
    # (production threads are long-lived and drop their parsers on themselves).
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "slow: slow tests (model loads, large fixtures)",
    "real_llm: tests that hit real LLM APIs; skipped unless explicitly enabled",
    "live: opt-in multi-turn tests that hit real upstream APIs; require provider keys",
]

[tool.coverage.run]
source = ["furl_ctx"]
branch = true
omit = [
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
