[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "furl-ctx"
version = "1.2.0"
description = "The context compression layer for AI agents - typically 0-54% fewer tokens on real high-entropy content, up to 95% on repetitive logs/fixtures (best-case ceiling), reversible via CCR"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Omar Y. Abdi", email = "omar19970423@gmail.com" }
]
maintainers = [
    { name = "Omar Y. Abdi", email = "omar19970423@gmail.com" }
]
keywords = [
    "llm",
    "openai",
    "anthropic",
    "claude",
    "gpt",
    "context",
    "token",
    "optimization",
    "compression",
    "caching",
    "ai",
    "machine-learning",
    "context-compression",
    "claude-code",
    "claude-code-plugin",
    "mcp",
    "mcp-server",
    "ai-agents",
    "token-optimization",
    "context-window",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # Core: lightweight compression (SmartCrusher, ContentRouter, CCR)
    # >=0.7.0: the default gpt-4o/o1 tokenizer needs the o200k_base
    # encoding, which tiktoken only ships from 0.7.0 — at the 0.5 floor
    # every count degraded to chars/4 estimation via
    # "ValueError: Unknown encoding o200k_base" (TEST-32b).
    "tiktoken>=0.7.0",            # Tokenizer for all compressors
    # tomli backport dropped (API-8/PERF-13): it existed solely for
    # release_version.py's tomllib fallback, which no longer ships in the
    # wheel (moved to scripts/) and is no longer reached from
    # `import furl_ctx` (the checkout git-version computation is gone).
]

[project.urls]
Homepage = "https://github.com/omar-y-abdi/furl-ctx"
Repository = "https://github.com/omar-y-abdi/furl-ctx"
Issues = "https://github.com/omar-y-abdi/furl-ctx/issues"

[project.scripts]
furl = "furl_ctx.cli:main"

[project.optional-dependencies]
# MCP server for Claude Code integration (furl_ctx.ccr.mcp_server).
# (httpx was dropped from this extra — nothing in the package imports it;
# it was proxy-era residue. The mcp SDK declares its own transport deps.)
mcp = [
    "mcp>=1.0.0",
]
# Opt-in AST-verified code compression (transforms.code_aware_compressor,
# Engine P2-12; enable via ContentRouterConfig.enable_code_aware=True).
# Deliberately NOT a default dependency (lean-core mandate): the grammar
# pack adds ~50MB. Missing extra → the compressor fails open (passthrough
# + one WARN). tree-sitter>=0.23 pins the `parser.language =` setter API
# and the unsendable-parser contract the thread-local cache satisfies.
code = [
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.7.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.15.19",
    "mypy>=1.14.1",
    "pre-commit>=3.0.0",
]
# All optional dependencies (everything the compression library can use)
all = [
    "furl-ctx[mcp]",
]

# Maturin builds a single wheel containing both the Python source under
# `furl_ctx/` AND the compiled Rust extension `furl_ctx/_core.so` (cdylib
# from `crates/furl-py`). One `pip install furl-ctx` ships everything
# atomically — no separate `furl-core-py` package, no chicken-and-egg,
# no PIP_FIND_LINKS plumbing. Phase A0's runtime fail-loud check still
# exists but only fires if someone forces an sdist install on a platform
# without a wheel and the rust toolchain isn't available to compile it.
# Pin the project's package index to public PyPI. Without this, `uv lock`
# inherits the developer's user-level `~/.config/uv/uv.toml` index
# setting — including private/internal mirrors like
# `pypi.netflix.net/simple` — and bakes those URLs into uv.lock, which
# then breaks CI on every public runner that can't reach the mirror.
# Declaring the index in pyproject.toml makes the project authoritative
# regardless of who runs `uv lock`.
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
default = true

[tool.maturin]
# Where the Python package lives. With `python-source = "."` and the
# package directory `furl_ctx/` at repo root, maturin includes every file
# under `furl_ctx/` in the wheel — that picks up the bundled YAML configs.
# `LICENSE` and `NOTICE` are listed
# explicitly because maturin sdists do not get the package-directory
# treatment wheels do, and PEP 639 auto-discovery emits both files into
# `License-File:` metadata — PyPI rejects sdists whose declared license
# files are missing from the tarball with `400 License-File X does not
# exist in distribution file`.
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "NOTICE", format = "sdist" },
]
python-source = "."
module-name = "furl_ctx._core"
# The cdylib source lives under `crates/furl-py`. Maturin invokes
# `cargo build` with this manifest to produce `_core.cdylib`, then injects
# the resulting `.so` into the wheel at `furl_ctx/_core.so`.
manifest-path = "crates/furl-py/Cargo.toml"
features = ["extension-module"]
# Forbid building without the cdylib feature — bare `cargo build` won't
# produce a usable Python extension. Maturin's default `bindings` is "pyo3"
# which is correct here (see `crates/furl-py/src/`).
bindings = "pyo3"

[tool.ruff]
target-version = "py310"
line-length = 100
# Exclude Claude Code tooling/skills directories — these are agent-runtime
# scripts, not project code, and are not present in CI git checkouts.
exclude = [".claude/agents", ".claude/hooks", ".claude/skills"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without strict parameter
]

[tool.ruff.lint.isort]
known-first-party = ["furl_ctx"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# Per-module overrides for modules with dynamic typing patterns
[[tool.mypy.overrides]]
module = [
    "furl_ctx.ccr.mcp_server",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "furl_ctx.tokenizers.*",
]
disallow_untyped_defs = false
warn_return_any = false

# Ignore third-party stubs with syntax errors
[[tool.mypy.overrides]]
module = ["mlx.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    # pyo3 Unsendable parsers emit an unraisable warning when GC drops them on a
    # test-teardown thread; this is a test-harness artifact, not a production issue
    # (production threads are long-lived and drop their parsers on themselves).
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
# `real_llm` / `live` markers removed (TEST-20/TEST-24): the proxy-era network
# suites they served are gone and no test carries either mark. `slow` stays —
# test_benchmarks_metrics_honesty.py marks four tests with it.
markers = [
    "slow: slow tests (model loads, large fixtures)",
]

[tool.coverage.run]
source = ["furl_ctx"]
branch = true
omit = [
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
